Fix spacing in <dd>

--- a/_base-mobile.scss
+++ b/_base-mobile.scss
@@ -714,18 +714,18 @@ div.section dd {
 }
 
 div.section dd p {
-  margin: 0 0.1em 1em 0;
+  margin: 0.5em 0.1em 0.5em 0;
   padding: 0;
 }
 
 div.section dd ul {
   padding-left: 1em;
-  margin: 0 0.1em 0.1em 0;
+  margin: 0.5em 0.1em 0.5em 0;
 }
 
 div.section dd ol {
   padding-left: 1.5em;
-  margin: 0 0.1em 0.1em 0;
+  margin: 0.5em 0.1em 0.5em 0;
 }
 
 div.section dd li {
